--- a/index.html
+++ b/index.html
@@ -8,44 +8,38 @@
     <title>Prisciila Queen of the Desert</title>
 </head>
 <body>
-    <div class="container" id="hero">
+    <div class="container">
         <img src="images/5706e9f910d4a.image.jpg">
         <!-- <h1>The Adventures of Priscilla Queen of the Desert</h1> -->
-    </div>
+    <div class="movie-container">
    <div id="buttons">
+       <div class="nav-btn">
        <button class="btn"><img src="buttons/play.svg" alt="play"></button>
        <button class="btn"><img src="buttons/plus.svg" alt="plus"></button>
        <button class="btn"><img src="buttons/thumbs-up.svg" alt="thumbs-up"></button>
        <button class="btn"><img src="buttons/thumbs-down.svg"alt="thumbs-down"></button>
+       </div>
+       <div class="more-info-btn">
        <button class="btn"><img src="buttons/down.svg"alt="down"></button>
+    </div>
    </div> 
 
-   <div>
-        <container id="movie-info">
-            <h2 id="match-percentage">99% Match</h2>
+   <div id="movie-info">
+            <p id="match-percentage">99% Match</p>
             <img id="rating" src="images/1200px-BBFC_18_2019.png">
-            <h2 id="length">1h 44m</h2>
-
-        </container>
-   </div>
-        <container id="movie-type">
-
-        </container>
-
-   <div id="genre">
-       <ul>
-           <li>
-               Comedy
-           </li>
-           <li>
-            Musical 
-        </li>
-        <li>
-            Drama
-        </li>
-       </ul>
-
-   </div>
+            <p id="length">1h 44m</p>
+    </div>
+    <div class="genres">
+        <ul id="genre-description">
+            <li>Comedy</li>
+            <li>Musical</li>
+            <li>Drama</li>
+           </ul>
+    </div>
+       
+   
+    </div>
+</div>
 
     <script src="script.js"></script>
 </body>
